kustomize/deployment.yaml
# openhab.git:kustomize/deployment.yaml
# notes:
# Patch the manifest in the overlay with:
# - Namespace, e.g. "namespace: automation"
# - OpenHAB-related image tags (they defsult to `latest`), e.g.
#     images:
#       - name: openhab/openhab
#         newTag: "4.2.1"
#         newName: "$(HARBOR_REGISTRY)/openhab"
#       - name: $(HARBOR_REGISTRY)/configmap-reload
#         newTag: "v0.13.1"
#       - name: $(HARBOR_REGISTRY)/openssh-server
#         newTag: "1.0"
#       - name: grafana/alloy
#         newName: $(HARBOR_REGISTRY)/alloy
#         newtag: latest
# Define the following variables:
# - HARBOR_REGISTRY - the full domain name of the container image registry
# - PUBLIC_KEY_URL - the URL to the SSH public key stored in GitHub
# - OPENHAB_USER - the user name for SSH login to OpenHAB Pod
# - TIME_ZONE - the timezone to set in the OpenHAB Java runtime, e.g. "Europe/Amsterdam"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openhab
  labels:
    app.kubernetes.io/name: openhab
spec:
  progressDeadlineSeconds: 300
  replicas: 1
  revisionHistoryLimit: 10
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: openhab
  template:
    metadata:
      labels:
        app.kubernetes.io/name: openhab
    spec:
      containers:
        - name: openhab-ssh
          image: "$(HARBOR_REGISTRY)/openssh-server"
          ports:
            - containerPort: 2222
          volumeMounts:
            - name: openhab-data
              mountPath: /openhab/userdata
              subPath: userdata
            - name: openhab-data
              mountPath: /openhab/conf
              subPath: conf
            - name: openhab-data
              mountPath: /openhab/addons
              subPath: addons
            - name: localtime
              mountPath: /etc/localtime
              readOnly: true
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 256Mi
        - name: config-reloader
          image: $(HARBOR_REGISTRY)/configmap-reload
          imagePullPolicy: IfNotPresent
          volumeMounts:
          - mountPath: /etc/alloy
            name: config
          - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
            name: kube-api-access-fkctk
            readOnly: true
          args:
            - --volume-dir=/etc/alloy
            - --webhook-url=http://localhost:12345/-/reload
          resources:
            requests:
              cpu: 1m
              memory: 5Mi
            limits:
              cpu: 100m
              memory: 32Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        - name: openhab
          image: openhab/openhab
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: "4096Mi"
              cpu: "1"
            requests:
              memory: "512Mi"
              cpu: "400m"
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 30
            failureThreshold: 5
          securityContext:
            privileged: true
          ports:
            - containerPort: 8080
            - containerPort: 8101
            - containerPort: 5007
          volumeMounts:
            - name: openhab-data
              mountPath: /openhab/addons
              subPath: addons
            - name: openhab-data
              mountPath: /openhab/conf
              subPath: conf
            - name: openhab-data
              mountPath: /openhab/userdata
              subPath: userdata
            - name: localtime
              mountPath: /etc/localtime
              readOnly: true
      volumes:
        - name: openhab-data
          persistentVolumeClaim:
            claimName: openhab-data
        - name: localtime
          hostPath:
            path: /etc/localtime
        - configMap:
            defaultMode: 420
            name: openhab-alloy
          name: config
        - name: kube-api-access-fkctk
          projected:
            defaultMode: 420
            sources:
            - serviceAccountToken:
                expirationSeconds: 3607
                path: token
            - configMap:
                items:
                - key: ca.crt
                  path: ca.crt
                name: kube-root-ca.crt
            - downwardAPI:
                items:
                - fieldRef:
                    apiVersion: v1
                    fieldPath: metadata.namespace
                  path: namespace
